--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,10 @@
 	url = https://github.com/gabime/spdlog
 [submodule "RampEngine/vendor/GLFW"]
 	path = RampEngine/vendor/GLFW
-	url = https://github.com/TheCherno/GLFW
+	url = https://github.com/bekogeko/glfw
 [submodule "RampEngine/vendor/imgui"]
 	path = RampEngine/vendor/imgui
-	url = https://github.com/TheCherno/imgui
+	url = https://github.com/bekogeko/imgui
 [submodule "RampEngine/vendor/glm"]
 	path = RampEngine/vendor/glm
 	url = https://github.com/g-truc/glm/
