--- a/RampEngine/RampEngine.vcxproj.filters
+++ b/RampEngine/RampEngine.vcxproj.filters
@@ -7,9 +7,6 @@
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Platform\Opengl">
-      <UniqueIdentifier>{75A89437-E109-7245-6A77-B8F7D6D7A804}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
     </Filter>
@@ -45,9 +42,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Platform\Opengl\ImGuiOpenGLRenderer.h">
-      <Filter>src\Platform\Opengl</Filter>
-    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
     </ClInclude>
@@ -1352,9 +1346,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Platform\Opengl\ImGuiOpenGLRenderer.cpp">
-      <Filter>src\Platform\Opengl</Filter>
-    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1363,6 +1354,9 @@
     </ClCompile>
     <ClCompile Include="src\Ramp\Application.cpp">
       <Filter>src\Ramp</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Ramp\ImGui\ImGuiBuild.cpp">
+      <Filter>src\Ramp\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Ramp\ImGui\ImGuiLayer.cpp">
       <Filter>src\Ramp\ImGui</Filter>
